# shallenge

./: Cargo.toml  README.md
src/: hash.rs  main.rs  tui.rs
