[package]
name = "shallenge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
core_affinity = "0.8.1"
crossbeam = "0.8.4"
crossterm = "0.28.1"
hex = "0.4.3"
ratatui = "0.29.0"
sha2 = { version = "0.10.8", features = ["asm"] }

[profile.release]
# add debug symbols for profiling work
debug = true
